welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: value poseBiscuit is not a member of Unit
while(!estSurBiscuit){avance();}poseBiscuit(); 
                                ^