welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(!estSurBiscuit){recule();}
prendBiscuit();porteBiscuit();
while(!estSurBiscuit){avance();}poseBiscuit();